--- a/src/app/features/modals/settings/preferences-modal/preferences-modal.component.html
+++ b/src/app/features/modals/settings/preferences-modal/preferences-modal.component.html
@@ -391,7 +391,7 @@
 
   <!-- Number Control Template -->
   <ng-template #numberControl let-category="category" let-key="key" let-meta="meta">
-    <div class="gnome-stepper">
+    <div class="stepper">
       <button
         mat-icon-button
         (click)="decrementNumber(category, key, meta)"
