--- a/src/app/shared/components/installation-options/installation-options.component.html
+++ b/src/app/shared/components/installation-options/installation-options.component.html
@@ -52,7 +52,7 @@
       }
       @case ('existing') {
         <div class="option-info" @slideInOut>
-          <p>Select an existing rclone binary on your system.</p>
+          <p>Select an existing rclone binary path on your system.</p>
           <mat-form-field color="accent" appearance="outline">
             <mat-label>Binary Path</mat-label>
             <input
