--- a/src/app/shared/detail-shared/transfer-activity-panel/completed-transfers-table.component.scss
+++ b/src/app/shared/detail-shared/transfer-activity-panel/completed-transfers-table.component.scss
@@ -16,6 +16,7 @@
 
     .mat-mdc-header-cell {
       color: var(--app-text-color);
+      background-color: var(--secondary-background);
       font-weight: 600;
       font-size: var(--font-size-sm);
       padding: var(--space-sm) var(--space-md);
