--- a/src/app/features/components/dashboard/general-overview/general-overview.component.html
+++ b/src/app/features/components/dashboard/general-overview/general-overview.component.html
@@ -2,7 +2,7 @@
   <div class="overview-header" role="banner">
     <div class="header-content">
       <div class="title-section" aria-label="Application title">
-        <mat-icon svgIcon="rclone-2" class="app-icon" aria-hidden="true"></mat-icon>
+        <mat-icon svgIcon="rclone"></mat-icon>
         <h2 id="app-title">RClone Manager</h2>
       </div>
       <div class="header-divider" aria-hidden="true"></div>
