--- a/src/app/shared/components/search-container/search-container.component.scss
+++ b/src/app/shared/components/search-container/search-container.component.scss
@@ -9,7 +9,7 @@
 
   .search-input {
     padding: 12px 16px;
-    border: 1px solid rgba(var(--app-text-color-rgb), var(--search-border-opacity));
+    border: 1px solid rgba(var(--app-text-color-rgb), var(--active-opacity));
     border-radius: var(--panel-radius);
     background: var(--secondary-background);
     color: var(--app-text-color);
