--- a/src/app/shared/remote-config/components/flag-config-step/flag-config-step.component.html
+++ b/src/app/shared/remote-config/components/flag-config-step/flag-config-step.component.html
@@ -75,7 +75,7 @@
             <mat-option [value]="remote + ':/'">
               <mat-icon
                 svgIcon="hard-drive"
-                style="margin-right: 8px; font-size: 16px; width: 16px; height: 16px"
+                style="margin-right: 8px; width: 16px; height: 16px"
               ></mat-icon>
               {{ remote }}
             </mat-option>
@@ -98,13 +98,13 @@
               @if (option.IsDir) {
                 <mat-icon
                   svgIcon="folder"
-                  style="margin-right: 8px; font-size: 16px; width: 16px; height: 16px"
+                  style="margin-right: 8px; width: 16px; height: 16px"
                 ></mat-icon>
               }
               @if (!option.IsDir) {
                 <mat-icon
                   svgIcon="file"
-                  style="margin-right: 8px; font-size: 16px; width: 16px; height: 16px"
+                  style="margin-right: 8px; width: 16px; height: 16px"
                 ></mat-icon>
               }
               {{ option.Name }}
@@ -159,7 +159,7 @@
             <mat-option [value]="remote + ':/'">
               <mat-icon
                 svgIcon="hard-drive"
-                style="margin-right: 8px; font-size: 16px; width: 16px; height: 16px"
+                style="margin-right: 8px; width: 16px; height: 16px"
               ></mat-icon>
               {{ remote }}
             </mat-option>
@@ -173,13 +173,13 @@
               @if (option.IsDir) {
                 <mat-icon
                   svgIcon="folder"
-                  style="margin-right: 8px; font-size: 16px; width: 16px; height: 16px"
+                  style="margin-right: 8px; width: 16px; height: 16px"
                 ></mat-icon>
               }
               @if (!option.IsDir) {
                 <mat-icon
                   svgIcon="file"
-                  style="margin-right: 8px; font-size: 16px; width: 16px; height: 16px"
+                  style="margin-right: 8px; width: 16px; height: 16px"
                 ></mat-icon>
               }
               {{ option.Name }}
