--- a/src/app/shared/detail-shared/transfer-activity-panel/completed-transfers-table.component.scss
+++ b/src/app/shared/detail-shared/transfer-activity-panel/completed-transfers-table.component.scss
@@ -6,7 +6,7 @@
   overflow-y: auto;
 
   .transfers-viewport {
-    height: 400px; // Or your preferred height
+    height: 50vh;
     width: 100%;
   }
 
